# function_analyzer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  basicblock  basicblock.cpp  cmake_install.cmake  compare.py  compile_commands.json  dwarf_parser.py  example  example.cpp  feature_extraction.cpp  find.py  main.cpp  pure_feature_extraction.cpp
example/: Makefile  main
example/include/: add.h  basicblock.h
example/src/: add.cpp  basicblock.cpp
output/: dec_feature.json  dec_functions_list.json  function_details.json  matched_functions.json  matched_functions_with_vectors.json  src_feature.json  src_functions_list.json
output/curl_out/: dec_feature.json  dec_functions_list.json  src_feature.json
output/curl_strip/: dec_feature.json  dec_functions_list.json
output/dec_func/: _Destroy<int*,int>.c  _Destroy<int*>.c  _GLOBAL__sub_I_maxOfThree.c  _M_allocate.c  _M_deallocate.c  _M_get_Tp_allocator.c  _M_range_initialize<int_const*>.c  _S_check_init_len.c  _S_max_size.c  _Vector_base.c  _Vector_impl.c  _Vector_impl_data.c  __copy_m<int>.c  __copy_move_a2<false,int_const*,int*>.c  __copy_move_a<false,int_const*,int*>.c  __destroy<int*>.c  __distance<int_const*>.c  __do_global_dtors_aux.c  __iterator_category<int_const*>.c  __libc_csu_init.c  __miter_base<int_const*>.c  __niter_base<int*>.c  __niter_base<int_const*>.c  __niter_wrap<int*>.c  __static_initialization_and_destruction_0.c  __uninit_copy<int_const*,int*>.c  __uninitialized_copy_a<int_const*,int*,int>.c  _init.c  _start.c  allocate.c  allocator.c  begin.c  copy<int_const*,int*>.c  countPrimes.c  end.c  (+19 more)
(+5 files in other folders)
